att login and register

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src\assets\css\style.css">
     <title>Eficaz</title>
+    <base href="/" reloadDocument>
   </head>
   <body>
     <div id="app"></div>
